add docker and docker compose

--- a/src/EasyShop.Api/appsettings.Development.json
+++ b/src/EasyShop.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=sqlserver;Database=easyshop;User=sa;Password=P@ssw0rd123;TrustServerCertificate=True;"
   }
 }
