--- a/src/EasyShop.Api/appsettings.json
+++ b/src/EasyShop.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=sqlserver;Database=easyshop;User=sa;Password=P@ssw0rd123;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
