add repository and fix bug inside them

--- a/src/EasyShop.Api/appsettings.json
+++ b/src/EasyShop.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=sqlserver;Database=easyshop;User=sa;Password=P@ssw0rd123;TrustServerCertificate=True;"
+    "DefaultConnection" : "Server=localhost;Database=easyshop;User=sa;Password=P@ssw0rd123;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
